tests/machine/x/go/order_by_map.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/order_by_map.go:50:11: cannot use _ as value or type

1: //go:build ignore
